<resources>
    <string name="app_name">TruyenTranhApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_home">Trang chủ</string>
    <string name="nav_favor">Truyện yêu thích</string>
    <string name="nav_popular">Truyện phổ biến</string>
    <string name="nav_profile">Thông tin</string>
    <string name="nav_login">Đăng nhập</string>
    <string name="nav_fanpage">Fanpage</string>
    <string name="nav_rate">Trang đánh giá</string>
    <string name="nav_logout">Đăng xuất</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">action_add</string>

</resources>